--- a/pn-simulator/package.json
+++ b/pn-simulator/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.0",
     "v-network-graph": "^0.5.13",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0"
