Refactor file structure

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pn-simulator",
-  "version": "0.1.0",
+  "name": "petri-net-simulator",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
