--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -34,7 +36,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest-environment-jsdom": "^27.1.0",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "^4.5.5"
   },
   "eslintConfig": {
     "root": true,
